--- a/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/slurm/parallelcluster_computemgtd.conf.erb
+++ b/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/slurm/parallelcluster_computemgtd.conf.erb
@@ -2,6 +2,6 @@
 cluster_name = <%= node['pcluster']['cluster_name'] %>
 region = <%= node['pcluster']['region'] %>
 proxy = <%= node['pcluster']['proxy'] %>
-clustermgtd_heartbeat_file_path = <%= node['slurm']['install_dir'] %>/etc/pcluster/.slurm_plugin/clustermgtd_heartbeat
+clustermgtd_heartbeat_file_path = <%= node['pcluster']['shared_dir'] %>/.slurm_plugin/clustermgtd_heartbeat
 dynamodb_table = <%= node['pcluster']['cfn_stack_outputs']['Outputs']['DynamoDBTable'] %>
 slurm_nodename_file = <%= node['pcluster']['local_dir'] %>/slurm_nodename
