--- a/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/slurm/parallelcluster_slurm_suspend.conf.erb
+++ b/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/slurm/parallelcluster_slurm_suspend.conf.erb
@@ -1,2 +1,2 @@
 [slurm_suspend]
-clustermgtd_heartbeat_file_path = <%= node['slurm']['install_dir'] %>/etc/pcluster/.slurm_plugin/clustermgtd_heartbeat
+clustermgtd_heartbeat_file_path = <%= node['pcluster']['shared_dir'] %>/.slurm_plugin/clustermgtd_heartbeat
