--- a/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/supervisord.conf.erb
+++ b/scheduler_plugins/slurm/artifacts/slurm_plugin_cookbook/templates/default/supervisord.conf.erb
@@ -15,16 +15,16 @@ supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 <% when 'head' -%>
 [program:clustermgtd]
 command = <%= node['pcluster']['python_root'] %>/clustermgtd
-user = <%= node['plugin']['user'] %>
-environment = HOME="/home/<%= node['plugin']['user'] %>",USER="<%= node['plugin']['user'] %>",CONFIG_FILE="<%= node['pcluster']['local_dir'] %>/parallelcluster_clustermgtd.conf",SLURM_BINARIES_DIR="<%= node['slurm']['install_dir'] %>/bin"
+user = <%= node['plugin']['fleet_mgt_user'] %>
+environment = HOME="/home/<%= node['plugin']['fleet_mgt_user'] %>",USER="<%= node['plugin']['fleet_mgt_user'] %>",CONFIG_FILE="<%= node['pcluster']['local_dir'] %>/parallelcluster_clustermgtd.conf",SLURM_BINARIES_DIR="<%= node['slurm']['install_dir'] %>/bin"
 redirect_stderr = true
 stdout_logfile = /var/log/parallelcluster/clustermgtd
 
 <% when 'compute' -%>
 [program:computemgtd]
 command = <%= node['pcluster']['python_root'] %>/computemgtd
-user = <%= node['plugin']['user'] %>
-environment = HOME="/home/<%= node['plugin']['user'] %>",USER="<%= node['plugin']['user'] %>",CONFIG_FILE="<%= node['pcluster']['shared_dir'] %>/parallelcluster_computemgtd.conf",SLURM_BINARIES_DIR="<%= node['slurm']['install_dir'] %>/bin"
+user = <%= node['plugin']['fleet_mgt_user'] %>
+environment = HOME="/home/<%= node['plugin']['fleet_mgt_user'] %>",USER="<%= node['plugin']['fleet_mgt_user'] %>",CONFIG_FILE="<%= node['pcluster']['shared_dir'] %>/parallelcluster_computemgtd.conf",SLURM_BINARIES_DIR="<%= node['slurm']['install_dir'] %>/bin"
 redirect_stderr = true
 stdout_logfile = /var/log/parallelcluster/computemgtd
 <% end -%>
