--- a/tests/integration-tests/configs/common.jinja2
+++ b/tests/integration-tests/configs/common.jinja2
@@ -2,8 +2,8 @@
 {%- set REGIONS_CHINA = ["cn-north-1", "cn-northwest-1"] -%}
 {%- set REGIONS_GOVCLOUD = ["us-gov-west-1", "us-gov-east-1"] -%}
 {%- set REGIONS_ALL = REGIONS_COMMERCIAL + REGIONS_CHINA + REGIONS_GOVCLOUD -%}
-{%- set SCHEDULERS_ALL = ["slurm", "sge", "torque", "awsbatch"] -%}
-{%- set SCHEDULERS_TRAD = ["slurm", "sge", "torque"] -%}
+{%- set SCHEDULERS_ALL = ["slurm", "awsbatch"] -%}
+{%- set SCHEDULERS_TRAD = ["slurm"] -%}
 {%- set OSS_BATCH = ["alinux2"] -%}
 {%- set OSS_COMMERCIAL_X86 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004"] -%}
 {%- set OSS_CHINA_X86 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
