Add rhel8 tests to daily integration tests
For some tests on which we are testing a single OS,
I replaced old OSes like centos7 and ubuntu18 favouring rhel8.

In future we need to enable not yet supported features like:
* test_ad_integration
* test_dcv
* test_cloudwatch_logging
* test_arm_pl

The following tests should be enabled but they are still failing:
* test_cluster_in_no_internet_subnet
* test_ebs_existing
* test_dynamic_file_systems_update

The following tests are not enabled because raid mount does not work yet
* test_raid_performance_mode
* test_update_slurm

The following tests are not enabled because system-analyzer fails
* test_disable_hyperthreading
* test_efa

Then in future we should remove the OSS_*_NO_RHEL8 temporary variables.
In future we can also replace centos7 with rhel8 in tests executed for a single OS.

Signed-off-by: Enrico Usai <usai@amazon.com>

--- a/tests/integration-tests/configs/common.jinja2
+++ b/tests/integration-tests/configs/common.jinja2
@@ -5,13 +5,16 @@
 {%- set SCHEDULERS_ALL = ["slurm", "awsbatch"] -%}
 {%- set SCHEDULERS_TRAD = ["slurm"] -%}
 {%- set OSS_BATCH = ["alinux2"] -%}
-{%- set OSS_COMMERCIAL_X86 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_CHINA_X86 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_GOVCLOUD_X86 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_COMMERCIAL_ARM = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_CHINA_ARM = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_GOVCLOUD_ARM = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
-{%- set OSS_ONE_PER_DISTRO = ["centos7", "alinux2", "ubuntu1804"] -%}
+{%- set OSS_COMMERCIAL_X86 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_COMMERCIAL_X86_NO_RHEL8 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_CHINA_X86 = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_GOVCLOUD_X86 = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_GOVCLOUD_X86_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_COMMERCIAL_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_COMMERCIAL_ARM_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_CHINA_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_GOVCLOUD_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
+{%- set OSS_ONE_PER_DISTRO = ["centos7", "alinux2", "ubuntu1804", "rhel8"] -%}
 {%- set INSTANCES_DEFAULT_X86 = ["c5.xlarge"] -%}
 {%- set INSTANCES_DEFAULT_ARM = ["m6g.xlarge"] -%} # m6g.xlarge is not supported in af-south-1, eu-south-1, eu-west-3, me-south-1
 {%- set INSTANCES_DEFAULT = ["c5.xlarge", "m6g.xlarge"] -%}
