--- a/tests/integration-tests/configs/common.jinja2
+++ b/tests/integration-tests/configs/common.jinja2
@@ -6,12 +6,9 @@
 {%- set SCHEDULERS_TRAD = ["slurm"] -%}
 {%- set OSS_BATCH = ["alinux2"] -%}
 {%- set OSS_COMMERCIAL_X86 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
-{%- set OSS_COMMERCIAL_X86_NO_RHEL8 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004"] -%}
 {%- set OSS_CHINA_X86 = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
 {%- set OSS_GOVCLOUD_X86 = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
-{%- set OSS_GOVCLOUD_X86_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
 {%- set OSS_COMMERCIAL_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
-{%- set OSS_COMMERCIAL_ARM_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
 {%- set OSS_CHINA_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
 {%- set OSS_GOVCLOUD_ARM = ["alinux2", "ubuntu1804", "ubuntu2004", "rhel8"] -%}
 {%- set OSS_ONE_PER_DISTRO = ["centos7", "alinux2", "ubuntu2004", "rhel8"] -%}
@@ -28,3 +25,11 @@
         "{{ instance_key }}"
     {%- endif -%}
 {%- endmacro -%}
+
+{%- set OSS_COMMERCIAL_X86_NO_RHEL8 = ["alinux2", "centos7", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_COMMERCIAL_ARM_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_CHINA_X86_NO_RHEL8  = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_CHINA_ARM_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_GOVCLOUD_X86_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_GOVCLOUD_ARM_NO_RHEL8 = ["alinux2", "ubuntu1804", "ubuntu2004"] -%}
+{%- set OSS_ONE_PER_DISTRO_NO_RHEL8 = ["centos7", "alinux2", "ubuntu2004"] -%}
